fixes button stay «active» on mobile, in default theme, and mobile example stylesheet

--- a/examples/style.mobile.css
+++ b/examples/style.mobile.css
@@ -30,3 +30,13 @@ a.olControlZoomIn {
 a.olControlZoomOut {
     border-radius: 0 0 4px 4px;
 }
+div.olControlZoom a:hover {
+    background: #444444; /* fallback for IE */
+    background: rgba(0, 0, 0, 0.5);
+    filter: alpha(opacity=80);
+}
+@media only screen and (max-width: 600px) {
+    div.olControlZoom a:hover {
+        background: rgba(0, 0, 0, 0.3);
+    }
+}
